[project]
name = "tidytuesday"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.2.2",
    "marimo[recommended]>=0.13.10",
    "polars[all]>=1.29.0",
    "pydytuesday>=0.1.2",
    "python-lsp-server>=1.12.2",
    "seaborn[stats]>=0.13.2",
    "vegafusion>=2.0.2",
    "websockets>=15.0.1",
]
